--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
-h2{
+.sub-heading{
   text-align: center;
-  color: rgb(12, 1, 1);
+  color: #fff;
+  font-family: 'Italianno', cursive;
 }
+
 a, .sec-contact .btn {
   transition: all 0.25s;
 }
@@ -28,6 +30,7 @@ body {
   text-align: center;
   letter-spacing: 9px;
   text-transform: uppercase;
+  color: #fff;
 }
 .container > h1 {
   font-weight: 300;
@@ -110,16 +113,16 @@ hr {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, .5);
+  background: rgba(0, 0, 0, 0);
 }
 .main-heading {
-  position: absolute;
+  /* position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   z-index: 2;
-  padding: 0;
+  padding: 0; */
   margin: auto;
   height: 40px;
   color: #fff;
