--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-.sub-heading{
-  text-align: center;
-  color: #fff;
-  font-family: 'Italianno', cursive;
-}
 
 a, .sec-contact .btn {
   transition: all 0.25s;
@@ -36,6 +31,9 @@ body {
   font-weight: 300;
   text-align: center;
   text-transform: uppercase;
+}
+#copyright{
+  color:white;
 }
 p {
   font-size: 16px;
@@ -103,7 +101,7 @@ hr {
 .sec-main {
   position: relative;
   height: 560px;
-  background: url(https://images.unsplash.com/photo-1552084117-56a987666449?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60) no-repeat center center;
+  background: url(https://source.unsplash.com/kVf7VRgg4p8/1920x1080) no-repeat center center;
   background-size: cover;
 }
 .sec-main:after {
@@ -113,16 +111,16 @@ hr {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0);
+  background: rgba(0, 0, 0, 0.5);
 }
 .main-heading {
-  /* position: absolute;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   z-index: 2;
-  padding: 0; */
+  padding: 0;
   margin: auto;
   height: 40px;
   color: #fff;
